--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.username=nazwa_uzytkownika
 #spring.datasource.password=twoje_haslo
 #spring.jpa.database=mysql
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 trello.api.endpoint.prod=https://api.trello.com/1
