--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.12'
 	testCompileOnly 'org.projectlombok:lombok:1.18.12'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	//runtimeOnly 'org.postgresql:postgresql'
 	// providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
